--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: nrfmicro_13
-    shield: sofle_left
+    shield: tiboard_left
   - board: nrfmicro_13
-    shield: sofle_right
+    shield: tiboard_right
