--- a/config/tiboard.conf
+++ b/config/tiboard.conf
@@ -25,6 +25,29 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_EXT_POWER_USB_ONLY=n
 
 # Automatically turn off underglow when keyboard is not touched for 30s 
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+#
+# Configure PS2 Mouse Settings
+#
+
+# CONFIG_ZMK_MOUSE_TICK_DURATION=8
+# CONFIG_ZMK_MOUSE_PS2_SAMPLING_RATE=100
+# CONFIG_ZMK_MOUSE_PS2_SWAP_XY=y
+# CONFIG_ZMK_MOUSE_PS2_TP_INVERT_X=y
+# CONFIG_ZMK_MOUSE_PS2_ENABLE_CLICKING=n
+# CONFIG_ZMK_MOUSE_PS2_TP_TAP_TO_SELECT=n
+
+#
+# Logging
+#
+
+# CONFIG_ZMK_USB_LOGGING=y
+# CONFIG_ZMK_LOGGING_MINIMAL=y
+# CONFIG_PS2_LOG_LEVEL_DBG=n
+
+# CONFIG_LOG_MODE_IMMEDIATE=n
+# CONFIG_LOG_TIMESTAMP_64BIT=y
+# CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=2000
