--- a/config/tiboard.conf
+++ b/config/tiboard.conf
@@ -16,18 +16,19 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 # on and off. This also causes the display to turn off.
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 #
 # The features below are added by the sofle fork and won't work if you
 # switch to the default zmk branch
 #
 
-# Disable external power when not connected to USB
-CONFIG_ZMK_EXT_POWER_USB_ONLY=n
+# # Disable external power when not connected to USB
+# CONFIG_ZMK_EXT_POWER_USB_ONLY=n
 
-# Automatically turn off underglow when keyboard is not touched for 30s 
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+# # Automatically turn off underglow when keyboard is not touched for 30s 
+# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
 
 #
 # Configure PS2 Mouse Settings
